_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 'DocsLens'
-author: Riccardo Graziosi
-email: riccardo.graziosi97@gmail.com
+author: Kevin Zhao
+email: kz@drkz.com
 url: ''
 baseurl: ''
 description: |
