_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: kz@drkz.com
 url: ''
 baseurl: ''
 description: |
-  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+  An amateur photographer, and a neurosurgery resident.
 permalink: '/:slug.html'
 favicon: logo.png
 theme: no-style-please
