--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -33,6 +33,6 @@ entries:
           - title: with subsubitems
           - title: example page
             url: about
-  - title: PRO TIP
+  - title: contact
     entries:
-      - title: to edit this menu, edit _data/menu.yml file
+      - title: e-mail: kevin@drkz.com
